syntax = "proto3";

package antelope.eosio.token.v1;

message Accounts {
    repeated Account items = 1;
}

message Account {
    string contract = 1;
    string symcode = 2;
    string account = 3;
    string balance = 4;
}

message Stats {
    repeated Stat items = 1;
}

message Stat {
    // trace information
    string trx_id = 1;
    uint32 action_index = 2;

    // contract & scope
    string contract = 3;
    string symcode = 4;

    // data payload
    string issuer = 5;
    string max_supply = 6;
    string supply = 7;

    // extras
    int64 amount = 9;
    uint32 precision = 10;
    double value = 11;
}

message TransferEvents {
    repeated TransferEvent items = 1;
}

message TransferEvent {
    // transaction
    string trx_id = 1;
    uint32 action_ordinal = 2;

    // contract & scope
    string contract = 3;
    string action = 4;
    string symcode = 5;

    // data payload
    string from = 6;
    string to = 7;
    string quantity = 8;
    string memo = 9;

    // extras
    int64 amount = 10;
    uint32 precision = 11;
    double value = 12;
}
